tests/should-fail/rawcodes/rawcodelit-18.j
globals
    integer u = 'ab\\\x'
endglobals